# pyguard

./: .gitignore  Cargo.toml  LICENSE  README.md  TECHNICAL_PROPOSAL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  diagnostic.rs  engine.rs  lib.rs  main.rs  suppression.rs
src/rules/: guarded_function_import.rs  max_function_params.rs  mod.rs  no_assert.rs  no_async_from_sync.rs  no_bare_except.rs  no_boolean_positional.rs  no_broad_except.rs  no_dataclass.rs  no_future_annotations.rs  no_hasattr_getattr.rs  no_nested_try.rs  no_or_empty_coalesce.rs  no_pass_except.rs  no_print.rs  no_redundant_none_check.rs  no_sentinel_default.rs  no_str_empty_default.rs  no_todo_comment.rs  no_typing_any.rs
tests/: config.rs  edge_cases.rs  guarded_function_import.rs  integration.rs  max_function_params.rs  no_assert.rs  no_async_from_sync.rs  no_bare_except.rs  no_boolean_positional.rs  no_broad_except.rs  no_dataclass.rs  no_future_annotations.rs  no_hasattr_getattr.rs  no_nested_try.rs  no_or_empty_coalesce.rs  no_pass_except.rs  no_print.rs  no_sentinel_default.rs  no_typing_any.rs  suppression.rs
tests/helpers/: mod.rs
