[package]
name = "slopcop"
version = "0.1.0"
edition = "2021"
description = "A fast Python linter for catching LLM-generated anti-patterns"
license = "MIT"
repository = "https://github.com/cm2435/slopcop"
keywords = ["linter", "python", "tree-sitter", "code-quality"]
categories = ["development-tools"]

[[bin]]
name = "slopcop"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
