[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "slopcop"
version = "0.1.0"
description = "Fast Python linter for catching LLM-generated anti-patterns"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["linter", "python", "rust", "tree-sitter", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/cm2435/slopcop"

[tool.maturin]
bindings = "bin"
